--- a/Manuscript Analysis/manuscript_analysis.Rmd
+++ b/Manuscript Analysis/manuscript_analysis.Rmd
@@ -34,16 +34,89 @@ library(performance)
 library(sjPlot)
 library(ggcorrplot)
 
+# Load in the listener demographics data 
+
+demo <- rio::import("Cleaned Data/cleaned_listener_demo.csv") |>
+  dplyr::filter(pupil_complete == "complete") |>
+  dplyr::select(id, age, gender, ethnicity, race, native_lang) |>
+  dplyr::mutate(gender = factor(gender, levels = c("Man", "Woman", "Nonbinary", "Questioning", "Prefer not to answer")),
+                ethnicity = factor(ethnicity, levels = c("Hispanic/Latino(a/e)", "Not Hispanic/Latino(a/e)", "Prefer not to answer")),
+                race = factor(race, levels = c("white/Caucasian", "Black/African American", "Asian/Asian American",
+                                               "Native Hawaiian or Other Pacific Islander", "Native American or Alaska Native",
+                                               "Biracial or Multiracial", "Race not listed", "Prefer not to answer")),
+                native_lang = factor(native_lang, c("American English", "Not American English"))) |>
+  dplyr::rename(subject = id)
+
+# Loading in the cog data
+
+cog <- rio::import("Cleaned Data/cleaned_cog_data.csv") 
+
+# Loading in the pupil data
+
+pupil <- rio::import("Cleaned Data/cleaned_pupil_data_normalized.csv") 
+
+# Loading in the phrase accuracy data
+
+phrase_acc <- rio::import("Cleaned Data/repetition_accuracy.csv") |>
+  dplyr::mutate(rep_acc = ifelse(initial_response == "missing data", NA, 
+                                 ifelse(target_number == correct_words_initial, "accurate", "inaccurate")),
+                rep_acc_rel = ifelse(rel_response == "missing data", NA, 
+                                 ifelse(target_number == correct_words_rel, "accurate", "inaccurate")))
+
+
 ```
 
-# 
 
+# Listener Demographics
 
+The listeners used in this study are the same from the parent study. In brief, the demographic information from these listeners are below.
 
 ```{r}
 
-plot(pressure)
+demo_table <- demo |>
+  dplyr::select(age, gender, ethnicity, race, native_lang) |>
+  tbl_summary(type = list(age ~ "continuous",
+                          gender ~ "categorical",
+                          ethnicity ~ "categorical",
+                          race ~ "categorical",
+                          native_lang ~ "categorical"),
+              statistic = list(all_continuous() ~ "{mean} ({sd})",
+                               all_categorical() ~ "{n} ({p}%)"),
+              digits = list(everything() ~ c(2)),
+              label = list(age ~ "Age",
+                           gender ~ "Gender",
+                           ethnicity ~ "Ethnicity",
+                           race ~ "Race",
+                           native_lang ~ "Native Language")) |>
+  as_gt()
+
+demo_table
+
+demo_table |>
+  gt::gtsave("Tables/demo_table.html")
 
 ```
 
+# Listener Cognition
+
+```{r}
+
+cog_table <- cog |>
+  dplyr::select(-subject) |>
+  # Just using the age-corrected scores
+  dplyr::select(ends_with("_c")) |>
+  tbl_summary(statistic = list(all_continuous() ~ "{mean} ({sd})"),
+              digits = list(everything() ~ c(2)),
+              label = list(list_sort_c ~ "Working Memory",
+                           flanker_c ~ "Inhibitory Control",
+                           card_sort_c ~ "Cognitive Flexibility",
+                           pattern_c ~ "Processing Speed")) |>
+  as_gt()
+
+cog_table
+
+cog_table |>
+  gt::gtsave("Tables/cog_table.html")
+
+```
 
