--- a/Manuscript Analysis/manuscript_analysis.Rmd
+++ b/Manuscript Analysis/manuscript_analysis.Rmd
@@ -33,6 +33,8 @@ library(ggridges)
 library(performance)
 library(sjPlot)
 library(ggcorrplot)
+library(mgcv) # install.packages("mgcv")
+library(itsadug) # install.packages("itsadug")
 
 # Load in the listener demographics data 
 
@@ -67,9 +69,11 @@ phrase_acc <- rio::import("Cleaned Data/repetition_accuracy.csv") |>
 ```
 
 
-# Listener Demographics
+# Listener Characteristics
 
-The listeners used in this study are the same from the parent study. In brief, the demographic information from these listeners are below.
+## Demographic Information
+
+The listeners used in this study are the same from the parent study. In brief, the demographic information from these listeners are below. A total of 34 young adult listeners participated in the experiment.
 
 ```{r}
 
@@ -97,7 +101,9 @@ demo_table |>
 
 ```
 
-# Listener Cognition
+## Listener Cognition
+
+The information below reports the mean age-corrected standardized scores on the subtests from the NIH Toolbox cognition battery (working memory, inhibitory control, cognitive flexibility, and processing speed). 
 
 ```{r}
 
@@ -117,6 +123,257 @@ cog_table
 
 cog_table |>
   gt::gtsave("Tables/cog_table.html")
+
+```
+
+
+```{r}
+
+# Color Palette for Figures
+my_pal <- c("#033F63", "#2CB5AE", "#28666E", "#4BAA9B", "#49E9B9", "#57A773")
+
+cog |>
+  dplyr::select(subject, ends_with("_c")) |>
+  dplyr::rename("Working Memory" = list_sort_c,
+                "Inhibitory Control" = flanker_c,
+                "Cognitive Flexibility" = card_sort_c,
+                "Processing Speed" = pattern_c) |>
+  tidyr::pivot_longer(cols = 'Working Memory':'Processing Speed',
+                      names_to = "cog_measure",
+                      values_to = "score") |>
+  ggplot() +
+  aes(x = score,
+      y = cog_measure,
+      color = cog_measure,
+      fill = cog_measure) +
+  geom_density_ridges(jittered_points = T,
+                      position = position_points_jitter(width = 0.05, height = 0),
+                      point_shape = '|', point_size = 3, point_alpha = 1, alpha = 0.5) +
+  labs(x = "Score", y = "", color = "Cognitive Measure", fill = "Cognitive Measure") +
+  scale_color_manual(values = c(my_pal[3],my_pal[4], my_pal[5], my_pal[6])) +
+  scale_fill_manual(values = c(my_pal[3],my_pal[4], my_pal[5], my_pal[6])) +
+  theme_classic() +
+  theme(legend.position = "none")
+
+```
+
+
+```{r}
+
+# Removing unneeded items
+
+rm(cog_table, demo_table, demo)
+
+```
+
+
+# Pupil Dilation
+
+```{r}
+
+# Selecting needed variables from phrase repetition accuracy df
+
+acc <- phrase_acc |>
+  dplyr::select(subject, trial, target_number, correct_words_initial, rep_acc)
+
+## Merging acc df with pupil dilation df
+
+pupil <- pupil |>
+  # Merging phrase accuracy information with df
+  dplyr::left_join(acc, by = c("subject", "trial")) |>
+  # Filter out trials with missing phrase repetition data |>
+  dplyr::filter(!is.na(rep_acc)) |>
+  # Merging cognitive data
+  dplyr::left_join(cog, by = "subject")
+
+```
+
+
+## Base Model
+
+Final Model from parent study
+
+```{r}
+
+pupil <- pupil |>
+  dplyr::mutate(speaker = factor(speaker, levels = c("Control", "ALS")),
+                rep_acc = factor(rep_acc, levels = c("accurate", "inaccurate")),
+                phrase = as.factor(code),
+                listener = as.factor(subject),
+                condition = case_when(speaker == "Control" & rep_acc == "accurate" ~ "Control Accurate",
+                                      speaker == "Control" & rep_acc == "inaccurate" ~ "Control Inaccurate",
+                                      speaker == "ALS" & rep_acc == "accurate" ~ "ALS Accurate",
+                                      TRUE ~ "ALS Inaccurate"),
+                condition = factor(condition, 
+                                   levels = c("Control Accurate", "Control Inaccurate", "ALS Accurate", "ALS Inaccurate"))) |>
+  dplyr::group_by(listener, speaker) |>
+  dplyr::mutate(num_points = n()) |>
+  dplyr::mutate(start_event = c(TRUE, rep(FALSE, each = (num_points - 1)))) |>
+  ungroup()
+
+m0_pupil <- bam(normed_pupil ~ condition +
+                  s(time_norm, by = condition, k = 25) +
+                  # Random Smooth for listener
+                  s(time_norm, listener, bs = 'fs', m = 1),
+                discrete = T,
+                AR.start = start_event,
+                rho = .9341941,
+                family = "scat",
+                data = pupil)
+
+summary.gam(m0_pupil)
+
+m0_prediction <- plot_smooth(m0_pupil,
+            view = "time_norm",
+            plot_all = "condition",
+            rug = F, se = 1, rm.ranef = T)
+
+```
+
+```{r}
+
+m0_predicted_values <- m0_prediction[[1]][c("condition", "time_norm", "fit", "ul", "ll")] |>
+  dplyr::mutate(rep_acc = ifelse(grepl("inaccurate", condition, ignore.case = T), "inaccurate", "accurate"),
+                speaker = ifelse(grepl("Control", condition, ignore.case = T), "Control", "ALS"),
+                speaker = factor(speaker, levels = c("Control", "ALS")))
+
+m0_predicted_values |>
+  ggplot() +
+  aes(x = time_norm,
+      y = fit,
+      color = speaker,
+      fill = speaker) +
+  geom_ribbon(aes(ymin = ul, ymax = ll), alpha = .5, color = NA) +
+  geom_line() +
+  geom_vline(xintercept = 0, size = 0.35) +
+  geom_vline(xintercept = 1910, linetype = 2) +
+  annotate("rect", xmin = 500, xmax = 2910, ymin = 0, ymax = 200, alpha = 0.15) +
+  coord_cartesian(ylim = c(-10, 250), xlim = c(0, 4910)) +
+  facet_wrap("rep_acc") +
+  theme_bw() +
+  theme(aspect.ratio = 1,
+        legend.position = "bottom") +
+  labs(x = "Normalized Time (ms)",
+       y = "Pupil Dilation (Arbitrary Units)",
+       color = "Speaker",
+       fill = "Speaker",
+       linetype = "Speaker") +
+  scale_color_manual(values = c(my_pal[1], my_pal[5]), labels = c("Neurotypical", "ALS")) +
+  scale_fill_manual(values = c(my_pal[1], my_pal[5]), labels = c("Neurotypical", "ALS"))
+
+```
+
+
+
+## Working Memory
+
+### Initial Model
+
+```{r}
+
+wm_pupil <- bam(normed_pupil ~ condition +
+                  s(time_norm, by = condition, k = 25) +
+                  te(time_norm, list_sort_c, k = 20) +
+                  # Random Smooth for listener
+                  s(time_norm, listener, bs = 'fs', m = 1),
+                discrete = T,
+                AR.start = start_event,
+                rho = .9341941,
+                family = "scat",
+                data = pupil)
+
+summary.gam(wm_pupil)
+
+```
+
+#### Model Check
+
+```{r}
+
+gam.check(wm_pupil)
+
+acf_resid(wm_pupil)
+
+```
+
+#### Model Comparison
+
+```{r}
+
+compareML(m0_pupil, wm_pupil, signif.stars = T, suggest.report = T)
+
+```
+
+### Model 1
+
+```{r}
+
+wm_pupil_1 <- bam(normed_pupil ~ condition +
+                  s(time_norm, by = condition, k = 25) +
+                  te(time_norm, list_sort_c, by = speaker, k = 20) +
+                  # Random Smooth for listener
+                  s(time_norm, listener, bs = 'fs', m = 1),
+                discrete = T,
+                AR.start = start_event,
+                rho = .9341941,
+                family = "scat",
+                data = pupil)
+
+summary.gam(wm_pupil_1)
+
+
+```
+
+#### Model Check
+
+```{r}
+
+gam.check(wm_pupil_1)
+
+acf_resid(wm_pupil_1)
+
+```
+
+#### Model Comparison
+
+```{r}
+
+compareML(m0_pupil, wm_pupil_1, signif.stars = T, suggest.report = T)
+
+```
+### Model 2
+
+```{r}
+
+wm_pupil_2 <- bam(normed_pupil ~ condition +
+                  s(time_norm, by = condition, k = 25) +
+                  te(time_norm, list_sort_c, by = condition, k = 20) +
+                  # Random Smooth for listener
+                  s(time_norm, listener, bs = 'fs', m = 1),
+                discrete = T,
+                AR.start = start_event,
+                rho = .9341941,
+                family = "scat",
+                data = pupil)
+
+summary.gam(wm_pupil_2)
+
+```
+
+#### Model Check
+
+```{r}
+
+gam.check(wm_pupil_2)
+
+acf_resid(wm_pupil_2)
+
+```
+#### Model Comparison
+
+```{r}
+
+compareML(m0_pupil, wm_pupil_2, signif.stars = T, suggest.report = T)
 
 ```
 
